Update copyright and author info, add development credits

--- a/PerformanceOptimizations.csproj
+++ b/PerformanceOptimizations.csproj
@@ -8,7 +8,7 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <Description>High-performance optimizations for Resonite via Harmony patches. Reduces lock contention and improves multi-threaded performance.</Description>
-    <Authors>PerformanceOptimizations</Authors>
+    <Authors>troyBORG</Authors>
     <Copyright>Copyright © 2025</Copyright>
   </PropertyGroup>
 
